Accessibility fixes and updated README

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,25 +20,32 @@
       </p>
     </nav>
     <section class="m-3">
-      <h6 class="display-1">Blog</h6>
+      <!-- CHANGED: made main blog title an h1 -->
+      <h1 class="display-1">Blog</h1>
+
       <div style="border: 10px green dotted; text-align: right">
-        <h4>Back on Campus Again!</h4>
+        <!-- CHANGED: made post title an h2 -->
+        <h2>Back on Campus Again!</h2>
         <p>September 1st, 2025</p>
         <p>
           I am excited to get a good look at that fancy new building, Morgridge
           Hall!
         </p>
       </div>
+
       <div style="border: 10px yellow dotted">
-        <h1>Summer Internship</h1>
+        <!-- CHANGED: made post title an h2 -->
+        <h2>Summer Internship</h2>
         <p>May 1st, 2025</p>
         <p>
           I got a summer internship in Punxsutawney, Pennsylvania working on
           burrowing-mammal-based weather forecasting. Wish me luck!
         </p>
       </div>
+
       <div style="border: 10px red dotted">
-        <h3>My Favorite Holiday</h3>
+        <!-- CHANGED: made post title an h2 -->
+        <h2>My Favorite Holiday</h2>
         <p>February 2nd, 2025</p>
         <p>
           I really love Groundhog Day. Me and my buddies watch the movie every
@@ -48,3 +55,4 @@
     </section>
   </body>
 </html>
+
