--- a/my-work.html
+++ b/my-work.html
@@ -25,7 +25,8 @@
           <div class="col-4">
             <!-- Credit to ChatGPT for help generating this silly sample text -->
             <h3>Projects I've Done</h3>
-            <img src="/tech-swirl.jpg" />
+            <!-- CHANGED: added alt text -->
+            <img src="/tech-swirl.jpg" alt="Abstract swirl of technology shapes" />
             <h5>Smart Burrow Upgrade: Climate Control</h5>
             <p>
               I installed a suite of smart devices tailored to the unique needs
@@ -39,7 +40,8 @@
               that illuminates tunnels as I pass, saving energy and guiding
               late-night wanderings.
             </p>
-            <img src="/tech-desk.jpg" />
+            <!-- CHANGED: added alt text -->
+            <img src="/tech-desk.jpg" alt="Laptop and notebook on a desk" />
             <h5>Smart Burrow Upgrade: Security</h5>
             <p>
               I installed a suite of smart devices tailored to the unique needs
@@ -66,3 +68,4 @@
     </section>
   </body>
 </html>
+
